# ETHZ_asl_Kalibr-practice

./: .gitignore  README.md
bin2images/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
bin2images/data/: pullData.sh
bin2images/data/dataset/: imu.csv
bin2images/src/: example.cpp  tovideo.cpp
rokid-ic-cube/: camchain-imucam-homelimingKalibr_Practicerokid-ic-cubesubset.yaml  camchain.yaml  imu_LSM6DS3.yaml  results-imucam-homelimingKalibr_Practicerokid-ic-cubesubset.txt
samsung-s7/: camchain-imucam-homelimingKalibr_Practicesamsung-s7awsome.yaml  camchain.yaml  imu_LSM6DS3.yaml  results-imucam-homelimingKalibr_Practicesamsung-s7awsome.txt
samsung-s7/camera_calibration_opencv/: camera.yml  camera_0.yml  camera_1.yml  image_list.xml
